@@ -1,3 +1,9 @@
+2021-01-11  Allen D. Ball  <ball@hcf.dev>
+
+	* */src/main/java/ball/tools/javadoc/JavadocHTMLTemplates.java:
+	In annotation(...,Annotation ), do not include empty "()" in <a/>
+	text label.
+
 2021-01-09  Allen D. Ball  <ball@hcf.dev>
 
 	* jdk11/src/main/java/ball/tools/javadoc/AbstractTaglet.java:
